# kafka-connect-operator

./: .gitignore  CONTRIBUTING.md  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
.github/workflows/: _build_charm_dev.yaml  ci.yaml  release.yaml
integrator/: metadata.yaml  pyproject.toml
integrator/src/: charm.py  literals.py  models.py  workload.py
lib/charms/data_platform_libs/v0/: data_interfaces.py
lib/charms/kafka_connect/v0/: integrator.py
src/: charm.py  literals.py  workload.py
src/alert_rules/prometheus/: connect.rules
src/core/: models.py  structured_config.py  workload.py
src/events/: connect.py  kafka.py  provider.py  tls.py  upgrade.py  user_secrets.py
src/managers/: auth.py  config.py  connect.py  kafka.py  tls.py
terraform/: main.tf  variables.tf
tests/integration/: conftest.py  deployment.py  helpers.py  test_charm.py  test_cos.py  test_plugins.py  test_provider.py  test_requirer.py  test_scaling.py  test_terraform.py  test_tls.py  test_upgrade.py  test_user_secrets.py
tests/integration/app-charm/: config.yaml  metadata.yaml  requirements.txt
tests/integration/app-charm/src/: charm.py  integrator.py
tests/integration/sink-integrator-charm/: charmcraft.yaml  requirements.txt
tests/integration/source-integrator-charm/: charmcraft.yaml  requirements.txt
tests/unit/: TestJKS.java  conftest.py  helpers.py  test_charm.py  test_config.py  test_connect.py  test_connect_manager.py  test_plugins.py  test_provider.py  test_tls.py  test_tls_manager.py  test_upgrade.py  test_user_secrets.py
(+10 files in other folders)
