# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.poetry]
# TODO: check
name = "connect-operator"
version = "1.0"
description = "connect-operator"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ops = ">=2.17.0"

# The cosl dep could be removed from here once PYDEPS is released:
# https://github.com/canonical/charmcraft/pull/1003
cosl = ">= 0.0.5"

tenacity = ">=8.0.1"
pure-sasl = ">=0.6.2"
jsonschema = ">=4.10"
cryptography = ">42.0.0"
pydantic = "<2"
pyyaml = "^6.0.1"
requests = "^2.32.3"
lightkube = "0.15.0"
fastapi = "0.115.8"
uvicorn = "0.34.0"

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# data_platform_libs/v0/upgrade.py
# grafana_agent/v0/cos_agent.py requires pydantic <2
poetry-core = "*"
pydantic = "^1.10, <2"
# tls_certificates_interface/v1/tls_certificates.py
# tls_certificates lib uses a feature only available in cryptography >=42.0.5
cryptography = ">=42.0.5"
# hydra/v0/oauth.py
jsonschema = "*"

